<resources>
    <string name="app_name">Travel Hands Free</string>
    <string name="VERSION">Version 1.0</string>
    <string name="LOADING">Loading...</string>
    <string name="ADMIN">Admin</string>
    <string name="CLOAK_ROOM_OWNER">Cloak Room Owner</string>
    <string name="CLOAK_ROOM">Cloak Room</string>
    <string name="TOURIST">Tourist</string>
    <string name="NEXT">Next</string>
    <string name="SELECT_USER">Select User</string>
    <string name="USERNAME">Username</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN">Login</string>
    <string name="ADD_LOCATION">Add Location</string>
    <string name="ADD_TOURIST_SPOT">Add Tourist Spot</string>
    <string name="VIEW_TOURISTS">View Tourists</string>
    <string name="VIEW_LOCATIONS">View Locations</string>
    <string name="VIEW_FEEDBACK">View Feedbacks</string>
    <string name="ADD_CLOAK_ROOM">Add Cloak Room</string>
    <string name="VIEW_BOOKINGS_REQUEST">View Bookings Request</string>
    <string name="VIEW_BOOKINGS">View Bookings</string>
    <string name="ACCEPT_LUGGAGE">Accept Luggage</string>
    <string name="RETURN_LUGGAGE">Return Luggage</string>
    <string name="HERITAGE_SITE">Heritage Site</string>
    <string name="VIEW_PROFILE">View Profile</string>
    <string name="EDIT_PROFILE">Edit Profile</string>
    <string name="SEARCH_LOCATION">Search Location</string>
    <string name="GIVE_FEEDBACK">Give Feedback</string>
    <string name="VIEW_CLOAK_ROOM">View Cloak Rooms</string>
    <string name="SUBMIT_LUGGAGE">Submit Luggage</string>
    <string name="TAKEBACK_LUGGAGE">Takeback Luggage</string>
    <string name="NAME">Name</string>
    <string name="ADDRESS">Address</string>
    <string name="CONTACT">Contact</string>
    <string name="MAIL">Mail</string>
    <string name="PROFILE_PICTURE">Profile Picture</string>
    <string name="PROFILE_PHOTO">Profile Photo</string>
    <string name="EDIT">Save Changes</string>
    <string name="TOURIST_DETAILS">Tourist Details</string>
    <string name="FEEDBACK">Feedback</string>
    <string name="ENTER_FEEDBACK">Enter Feedback</string>
    <string name="SUBMIT">Submit</string>
    <string name="CLOAK_ROOM_OWNER_DETAILS">Cloak Room Owner Details</string>
    <string name="PHOTO">Photo</string>
    <string name="PER_HOUR_CHARGES">Per Hour Charges in Rs</string>
    <string name="CLOSES_AT">Closes At</string>
    <string name="OPENS_AT">Opens At</string>
    <string name="DESCRIPTION">Description</string>
    <string name="FEEDBACK_LIST">Feedback List</string>
    <string name="LOGOUT">Logout</string>
    <string name="ABOUT_US">About</string>
    <string name="CHANGE_PASSWORD">Change Password</string>
    <string name="HELP">Help</string>
    <string name="CONFIRM_PASSWORD">Reenter Password</string>
    <string name="OLD_PASSWORD">Old Password</string>
    <string name="NEW_PASSWORD">New Password</string>
    <string name="CONFIRM_NEW_PASSWORD">Confirm new Password</string>
    <string name="REGISTER">Register</string>
    <string name="REGISTRATION">Registration</string>
    <string name="FORGOT_PASSWORD">Forgot Password</string>
    <string name="ADD_CLOAKROOM_DETAILS">Add CloakRoom</string>
    <string name="ADD">Add</string>
    <string name="CLOAKROOM_PHOTO">Cloak Room photo</string>
    <string name="SELECT_OPENING_TIME">Opens At</string>
    <string name="SELECT_CLOSING_TIME">Closes At</string>
    <string name="FEEDBACK_DETAILS">Feedback Details</string>
    <string name="FEEDBACK_TOURIST">Tourist:</string>
    <string name="CLOAK_ROOM_NAME">Cloak Room:</string>
    <string name="SELECT_CLOAKROOM">Select CloakRoom:</string>
    <string name="TOURIST_LIST">Tourist List</string>
    <string name="CLOAKROOM_LIST">Cloak Room List</string>
    <string name="CLOAKROOM_DETAILS">Cloak Room Details</string>
    <string name="CLOAKROOM_NAME">Name:</string>
    <string name="CLOAKROOM_ADDRESS">Address:</string>
    <string name="BOOK">Book</string>
    <string name="SELECT_DATE">Select Date</string>
    <string name="BOOKING_DETAILS">Booking Details</string>
    <string name="DATE">Date:</string>
    <string name="BOOKED_BY">Booked By:</string>
    <string name="CANCEL_BOOKING">Cancel Booking</string>
    <string name="CLOAKROOM">Cloak Room:</string>
    <string name="BOOKINGS">Bookings</string>
    <string name="TOURIST_NAME">Name:</string>
    <string name="TOURIST_CONTACT">Contact:</string>
    <string name="TOURIST_MAIL">Mail:</string>
    <string name="CHARGE">Per Hour \nCharges:</string>
    <string name="ENTER_LOCATION">Enter Location</string>
    <string name="ENTER_SPOT_NAME">Enter tourist spot name</string>
    <string name="ENTER_SPOT_DESCRIPTION">Enter description of the place</string>
    <string name="TOURIST_SPOT_PHOTO">Select tourist spot photo</string>
    <string name="ENTER_SPOT_ADDRESS">Enter address of the place</string>

    <string name="LOCATION">Select Location:</string>
    <string name="TOURIST_SPOT_DETAILS">Tourist Spot Details</string>
    <string name="SPOT_NAME">Name:</string>
    <string name="BOOKING_ID">Booking ID:</string>
    <string name="ENTER_ID">Enter booking ID</string>
    <string name="OTP">OTP:</string>
    <string name="ENTER_OTP">Enter otp</string>
    <string name="LOCATION_NAME">Location:</string>
    <string name="TOURIST_SPOT_NAME">Tourist Spot:</string>
    <string name="OWNER">Owner:</string>
    <string name="OWNER_CONTACT">Contact:</string>
    <string name="OWNER_MAIL">Mail:</string>

</resources>
