<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Background"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/cloakroom"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
         />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/options"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/viewcloakroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/VIEW_CLOAK_ROOM"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:checked="true"
            android:buttonTint="@color/colorAccent"

            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/viewBookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/VIEW_BOOKINGS"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:buttonTint="@color/colorAccent"

            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/submitLuggage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/SUBMIT_LUGGAGE"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:buttonTint="@color/colorAccent"

            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/takebackLuggage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/TAKEBACK_LUGGAGE"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:buttonTint="@color/colorAccent"

            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/giveFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:text="@string/GIVE_FEEDBACK"
            android:textSize="20sp"
            android:buttonTint="@color/colorAccent"

            android:textStyle="bold" />

    </RadioGroup>

    <Button
        style="@style/ButtonStyle"
        android:layout_marginTop="50dp"
        android:onClick="next"
        android:text="@string/NEXT"
        />

</LinearLayout>
</ScrollView>