<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Background"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EDIT_PROFILE"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/mail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/MAIL"
            android:inputType="textEmailAddress" />


        <LinearLayout style="@style/LinearLayoutStyle" />

        <EditText
            android:id="@+id/contact"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/CONTACT"
            android:inputType="phone" />

        <LinearLayout style="@style/LinearLayoutStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@android:color/white"
            android:hint="@string/PROFILE_PHOTO"
            android:onClick="selectPhoto"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="86dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <Button
            style="@style/ButtonStyle"
            android:layout_marginTop="30dp"
            android:onClick="editDetails"
            android:text="@string/EDIT"
           />
    </LinearLayout>
</LinearLayout>