<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/SELECT_USER"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/userType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ADMIN"
            android:checked="true"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:buttonTint="@color/colorAccent"

            />
        <RadioButton
            android:id="@+id/cloakRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CLOAK_ROOM_OWNER"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:buttonTint="@color/colorAccent"
            />
        <RadioButton
            android:id="@+id/tourist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TOURIST"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:buttonTint="@color/colorAccent"

            />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        style="@style/ButtonStyle"
        android:layout_margin="20dp"
        android:onClick="selectUser"
        android:text="@string/NEXT"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        />
    <!--<Button-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/button_selector"-->
        <!--android:onClick="selectUser"-->
        <!--android:text="@string/NEXT"-->
        <!--android:textSize="22sp"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_margin="30dp"-->

        <!--/>-->
</LinearLayout>
</ScrollView>