<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Background"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/location"
        android:layout_gravity="center"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/ADD_LOCATION"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/ENTER_LOCATION"
        android:textSize="20sp"
        android:id="@+id/location"
        android:layout_marginTop="30dp"
        />
    <LinearLayout style="@style/LinearLayoutStyle" />


    <Button
        style="@style/ButtonStyle"
        android:layout_marginTop="50dp"
        android:onClick="addLocation"
        android:text="@string/ADD"
        />
</LinearLayout>
</ScrollView>